--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
         "titleBar.inactiveBackground": "#4f6d7a99",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#4F6D7A"
+    "peacock.color": "#4F6D7A",
+    "semgrep.scan.onlyGitDirty": false
 }
